--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.lucaslafarga.spidey.MockTestRunner"
     }
     buildTypes {
         release {
@@ -53,6 +53,10 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
     androidTestCompile 'com.google.code.findbugs:jsr305:3.0.0'
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
+    androidTestCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestApt 'com.google.dagger:dagger-compiler:2.2'
 }
 
 /*
